--- a/index.html
+++ b/index.html
@@ -10,20 +10,32 @@
 
   <div class="container">
     <h1>Segunda Guerra Mundial</h1>
-
+    <h2>Introdução</h2>
     <div class="section">
       <p class="intro">
-        Introdução
+        Introdução:
+        A Segunda Guerra Mundial foi aquele "caos global" entre 1939 e 1945, que parecia roteiro de filme, mas infelizmente foi a vida real. O planeta virou palco de disputas ideológicas, políticas e militares que mudaram completamente o rumo da humanidade. Foi mais do que uma guerra: foi o fim de uma era e o início de outra.
       </p>
 
       <h2>O Contexto Histórico</h2>
       <p class="content">
-       Contexto Histrórico
+       Contexto Histrórico:
+       Tudo começou quando a Alemanha, liderada por Adolf Hitler, resolveu que o Tratado de Versalhes não fazia mais sentido e decidiu... invadir a Polônia! Isso, em 1939, acendeu o pavio da bomba que já estava montada desde o fim da Primeira Guerra Mundial.
+      O mundo já estava tenso, com o crescimento do nazifascismo na Europa, o imperialismo japonês na Ásia e a expansão soviética. No meio dessa treta toda, as potências do Eixo (Alemanha, Itália e Japão) enfrentaram os Aliados (Reino Unido, França, União Soviética, Estados Unidos e outros).
       </p>
 
       <h2>Consequências e Impacto</h2>
       <p class="content">
-        Consequências e impaco
+        Consequências e impaco:
+        Mais de 70 milhões de mortes e cidades inteiras destruídas.
+
+        A criação da Organização das Nações Unidas (ONU) para tentar evitar novos conflitos tão destrutivos.
+
+        A ascensão dos Estados Unidos e da União Soviética como superpotências, começando a famosa Guerra Fria.
+
+        Avanços tecnológicos absurdos: de aviões a foguetes, sem esquecer da bomba atômica, usada pelos EUA contra o Japão, que deixou cicatrizes profundas.
+
+        Redesenho de fronteiras e o nascimento de diversos movimentos de descolonização na África e na Ásia.
       </p>
     </div>
 
@@ -31,14 +43,17 @@
     <div class="section">
       <h2>Segunda Guerra Mundial</h2>
       <p class="content">
-       Texto sobre a segunda guerra.
+       Texto sobre a segunda guerra:
+       Se fosse pra resumir: a Segunda Guerra foi o capítulo mais sombrio da história moderna, mas também foi um momento em que o mundo viu do que a humanidade é capaz — tanto para o mal quanto para o bem.
+        Dos campos de batalha na Europa às ilhas do Pacífico, passando pelos desertos da África, a guerra foi uma verdadeira aula de geopolítica, estratégia e resistência humana.
+        E no final, deixou claro que ninguém sai ileso de uma guerra: nem quem vence, nem quem perde.
       </p>
       <img src="segundaGuerra.png" alt="Grandes Navegações" class="image">
     </div>
 
     <!-- Tabela com países da América e datas de independência -->
     <div class="section">
-      
+    
     </div>
 
     <!-- Rodapé -->
