--- a/index.html
+++ b/index.html
@@ -10,32 +10,53 @@
 
   <div class="container">
     <h1>Segunda Guerra Mundial</h1>
-    <h2>Introdução</h2>
+
     <div class="section">
       <p class="intro">
-        Introdução:
-        A Segunda Guerra Mundial foi aquele "caos global" entre 1939 e 1945, que parecia roteiro de filme, mas infelizmente foi a vida real. O planeta virou palco de disputas ideológicas, políticas e militares que mudaram completamente o rumo da humanidade. Foi mais do que uma guerra: foi o fim de uma era e o início de outra.
+        A Segunda Guerra Mundial (1939–1945) foi um conflito global envolvendo as principais potências mundiais divididas em Aliados e Eixo. Foi o maior e mais destrutivo conflito da história da humanidade.
+
       </p>
 
       <h2>O Contexto Histórico</h2>
       <p class="content">
-       Contexto Histrórico:
-       Tudo começou quando a Alemanha, liderada por Adolf Hitler, resolveu que o Tratado de Versalhes não fazia mais sentido e decidiu... invadir a Polônia! Isso, em 1939, acendeu o pavio da bomba que já estava montada desde o fim da Primeira Guerra Mundial.
-      O mundo já estava tenso, com o crescimento do nazifascismo na Europa, o imperialismo japonês na Ásia e a expansão soviética. No meio dessa treta toda, as potências do Eixo (Alemanha, Itália e Japão) enfrentaram os Aliados (Reino Unido, França, União Soviética, Estados Unidos e outros).
+       Após a Primeira Guerra Mundial, a Alemanha enfrentou graves crises econômicas e políticas. O Tratado de Versalhes impôs sanções duras, fomentando ressentimentos que alimentaram o crescimento do nazismo.
+
+      </p>
+
+      <h2>Envolvidos e suas motivações</h2>
+      <p class="content">
+        Os principais países do Eixo (Alemanha, Itália e Japão) buscavam expansão territorial e poder. Os Aliados (como Reino Unido, URSS, EUA e França) lutaram pela contenção do expansionismo e pela liberdade dos povos.
+
+      </p>
+
+      <h2>Principais batalhas</h2>
+      <p class="content">
+        Entre as batalhas mais marcantes estão a Batalha de Stalingrado, o Dia D na Normandia, e a Batalha de Midway. Cada uma foi decisiva para a reviravolta a favor dos Aliados.
+
+      </p>
+
+      <h2>O papel dos EUA</h2>
+      <p class="content">
+        Os Estados Unidos inicialmente adotaram postura neutra, mas após o ataque a Pearl Harbor (1941), entraram na guerra contra o Eixo, contribuindo com forças militares e apoio econômico decisivo.
+
+      </p>
+
+      <h2>O papel da URSS</h2>
+      <p class="content">
+        A União Soviética, após ser invadida pela Alemanha em 1941, resistiu bravamente e teve papel crucial na derrota nazista, especialmente na frente oriental, com destaque para a Batalha de Stalingrado.
+
+      </p>
+
+      <h2>Hiroshimna e Nagasaki</h2>
+      <p class="content">
+        Em agosto de 1945, os EUA lançaram bombas atômicas sobre as cidades japonesas de Hiroshima e Nagasaki, matando centenas de milhares e acelerando o fim da guerra no Pacífico.
+
       </p>
 
       <h2>Consequências e Impacto</h2>
       <p class="content">
-        Consequências e impaco:
-        Mais de 70 milhões de mortes e cidades inteiras destruídas.
+        A guerra deixou cerca de 70 milhões de mortos, destruição massiva, a criação da ONU e a divisão do mundo em blocos liderados por EUA e URSS, dando início à Guerra Fria.
 
-        A criação da Organização das Nações Unidas (ONU) para tentar evitar novos conflitos tão destrutivos.
-
-        A ascensão dos Estados Unidos e da União Soviética como superpotências, começando a famosa Guerra Fria.
-
-        Avanços tecnológicos absurdos: de aviões a foguetes, sem esquecer da bomba atômica, usada pelos EUA contra o Japão, que deixou cicatrizes profundas.
-
-        Redesenho de fronteiras e o nascimento de diversos movimentos de descolonização na África e na Ásia.
       </p>
     </div>
 
@@ -43,17 +64,15 @@
     <div class="section">
       <h2>Segunda Guerra Mundial</h2>
       <p class="content">
-       Texto sobre a segunda guerra:
-       Se fosse pra resumir: a Segunda Guerra foi o capítulo mais sombrio da história moderna, mas também foi um momento em que o mundo viu do que a humanidade é capaz — tanto para o mal quanto para o bem.
-        Dos campos de batalha na Europa às ilhas do Pacífico, passando pelos desertos da África, a guerra foi uma verdadeira aula de geopolítica, estratégia e resistência humana.
-        E no final, deixou claro que ninguém sai ileso de uma guerra: nem quem vence, nem quem perde.
+       A Segunda Guerra Mundial mudou a geopolítica global. Com o fim do conflito, novas alianças surgiram, e o mundo entrou em um período de tensão ideológica e armamentista conhecido como Guerra Fria.
+
       </p>
       <img src="segundaGuerra.png" alt="Grandes Navegações" class="image">
     </div>
 
     <!-- Tabela com países da América e datas de independência -->
     <div class="section">
-    
+      
     </div>
 
     <!-- Rodapé -->
